Fix menu on small devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1186,7 +1186,7 @@ body {
   top: 0;
   left: 0;
   border-bottom: 2px solid #433F3F; }
-  @media (max-width: 650px) {
+  @media (max-width: 768px) {
     .navigation__toggle {
       display: block; } }
   .navigation__toggle .navigation__toggle__button {
@@ -1210,7 +1210,7 @@ body {
   z-index: 3; }
   .navigation.active {
     display: block; }
-  @media (max-width: 650px) {
+  @media (max-width: 768px) {
     .navigation {
       padding-top: 50px;
       width: 100%;
@@ -1224,14 +1224,14 @@ body {
       padding-top: 10px; } }
   .navigation .navigation__logo {
     text-decoration: none; }
-    @media (max-width: 650px) {
+    @media (max-width: 768px) {
       .navigation .navigation__logo {
         display: none; } }
   .navigation .navigation__title {
     font-size: 1.5em;
     text-decoration: none;
     color: #433F3F; }
-    @media (max-width: 650px) {
+    @media (max-width: 768px) {
       .navigation .navigation__title {
         display: none; } }
     .navigation .navigation__title span {
@@ -1240,7 +1240,7 @@ body {
   .navigation .navigation__items {
     margin-top: 50px;
     padding: 0 40px; }
-    @media (max-width: 650px) {
+    @media (max-width: 768px) {
       .navigation .navigation__items {
         padding: 0;
         text-align: center;
@@ -1253,7 +1253,7 @@ body {
       height: 1px;
       background: #919191;
       margin-right: 100px; }
-      @media (max-width: 650px) {
+      @media (max-width: 768px) {
         .navigation .navigation__items hr {
           display: none; } }
     .navigation .navigation__items a {
@@ -1262,7 +1262,7 @@ body {
       text-align: left;
       padding: 10px 0;
       text-decoration: none; }
-      @media (max-width: 650px) {
+      @media (max-width: 768px) {
         .navigation .navigation__items a {
           padding: 0;
           text-align: center;
@@ -1277,7 +1277,7 @@ body {
     margin-top: 50px;
     padding: 0 40px;
     text-align: left; }
-    @media (max-width: 650px) {
+    @media (max-width: 768px) {
       .navigation .navigation__footer {
         padding: 0;
         text-align: center;
@@ -1294,7 +1294,7 @@ body {
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
       transition: all 100ms ease-out;
       cursor: pointer; }
-      @media (max-width: 650px) {
+      @media (max-width: 768px) {
         .navigation .navigation__footer .bg__color {
           width: 50px;
           height: 50px; } }
