--- a/assets/css/partials/_navigation.scss
+++ b/assets/css/partials/_navigation.scss
@@ -9,7 +9,7 @@
   top: 0;
   left: 0;
   border-bottom: 2px solid $color2;
-  @media (max-width: 650px) {
+  @media (max-width: 768px) {
     display: block;
   }
   .navigation__toggle__button {
@@ -40,7 +40,7 @@
   &.active {
     display: block;
   }
-  @media (max-width: 650px) {
+  @media (max-width: 768px) {
     padding-top: 50px;
     width: 100%;
     height: auto;
@@ -55,7 +55,7 @@
 
   .navigation__logo {
     text-decoration: none;
-    @media (max-width: 650px) {
+    @media (max-width: 768px) {
       display: none;
     }
   }
@@ -64,7 +64,7 @@
     font-size: 1.5em;
     text-decoration: none;
     color: $color2;
-    @media (max-width: 650px) {
+    @media (max-width: 768px) {
       display: none;
     }
     span {
@@ -76,7 +76,7 @@
   .navigation__items {
     margin-top: 50px;
     padding: 0 40px;
-    @media (max-width: 650px) {
+    @media (max-width: 768px) {
       padding: 0;
       text-align: center;
       margin-top: 0;
@@ -89,7 +89,7 @@
       height: 1px;
       background: darken($color1, 40%);
       margin-right: 100px;
-      @media (max-width: 650px) {
+      @media (max-width: 768px) {
         display: none;
       }
     }
@@ -99,7 +99,7 @@
       text-align: left;
       padding: 10px 0;
       text-decoration: none;
-      @media (max-width: 650px) {
+      @media (max-width: 768px) {
         padding: 0;
         text-align: center;
         padding: 15px 0;
@@ -120,7 +120,7 @@
     margin-top: 50px;
     padding: 0 40px;
     text-align: left;
-    @media (max-width: 650px) {
+    @media (max-width: 768px) {
       padding: 0;
       text-align: center;
       padding: 20px 10px 40px 10px;
@@ -137,7 +137,7 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.25);
       transition: all 100ms ease-out;
       cursor: pointer;
-      @media (max-width: 650px) {
+      @media (max-width: 768px) {
         width: 50px;
         height: 50px;
       }
